IF(LLVM_CONFIG_EXECUTABLE)
	ADD_LIBRARY(ctocrawl SHARED ${CMAKE_CURRENT_SOURCE_DIR}/ctocrawl.cpp)
	SET_TARGET_PROPERTIES(ctocrawl PROPERTIES COMPILE_FLAGS "${LLVM_COMPILE_FLAGS} -fno-rtti")
	SET_TARGET_PROPERTIES(ctocrawl PROPERTIES LINK_FLAGS_RELEASE "-Wl,-undefined,dynamic_lookup")
	INSTALL(TARGETS ctocrawl
		LIBRARY DESTINATION lib/crawlc)
ENDIF()
